续写java对象的e诞生与消亡